--- a/style.css
+++ b/style.css
@@ -18,3 +18,9 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
+body {
+    background-color: grey;
+    width:100vw;
+    height:100vh;
+}
