--- a/style.css
+++ b/style.css
@@ -24,3 +24,8 @@ body {
     width:100vw;
     height:100vh;
 }
+
+.logo-container, .bg-img-container {
+    display:flex;
+    align-items:center;
+}
