--- a/style.css
+++ b/style.css
@@ -25,6 +25,12 @@ body {
     height:100vh;
 }
 
+.logo-container > img + h1 {
+    color:white;
+    font-size:calc(4rem + 1vw);
+    font-family:Arial, Helvetica, Verdana;
+}
+
 .logo-container, .bg-img-container {
     display:flex;
     align-items:center;
