--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ body {
     align-items:center;
 }
 
+.logo-container {
+    background-color:black;
+}
+
 .logo-container img {
     width:max(8vw, 50px);
 }
