feat:Add bg img

--- a/style.css
+++ b/style.css
@@ -49,4 +49,6 @@ body {
     height:100vh;
     min-width:250px;
     overflow:hidden;
+    background-image:url('./images/fieldimg.jpeg');
+    background-size:cover;
 }
