--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 }
 
 .logo-container {
-    background-color:black;
+    background-color:rgba(0,0,0,0.7);
     width:100%;
     justify-content:center;
 }
