--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
     background-color:rgba(0,0,0,0.7);
     width:100%;
     justify-content:center;
+    padding:1rem;
 }
 
 .logo-container img {
