--- a/style.css
+++ b/style.css
@@ -37,6 +37,15 @@ body {
     justify-content:center;
 }
 
+.logo-container + div > p > a, .logo-container + div {
+    color:white;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+a {
+    text-decoration:none;
+}
+
 .logo-container {
     background-color:rgba(0,0,0,0.7);
     width:100%;
