--- a/style.css
+++ b/style.css
@@ -49,6 +49,13 @@ body, .logo-container, .bg-img-container {
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.form-container {
+    flex:1;
+    background-color:rgb(200,200,200);
+    padding:20vh 10vw 20vh 20px;
+    overflow-y:scroll;
+}
+
 a {
     text-decoration:none;
 }
