--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@ body, .logo-container, .bg-img-container {
 
 .logo-container + div > p > a, .logo-container + div {
     color:white;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .form-container {
@@ -73,6 +72,11 @@ a {
 
 h2 {
     margin-bottom:30px;
+    font-size:1.2rem;
+}
+
+h2, .logo-container + div > p > a, .logo-container + div {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .logo-container img {
