--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 }
 
 .lorem-ipsum-text, form {
-    padding: 0 10vw 0 20px;
+    padding: 20px 10vw 20px 20px;
 }
 
 .logo-container > img + h1, legend {
