--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
     font-family:Arial, Helvetica, Verdana;
 }
 
-body, .logo-container, .bg-img-container {
+body, .logo-container, .bg-img-container, .input-container {
     display:flex;
 }
 
@@ -103,4 +103,5 @@ form {
 
 .input-container {
     margin-top:15px;
+    flex-wrap:wrap;
 }
