--- a/style.css
+++ b/style.css
@@ -83,6 +83,10 @@ h2, .logo-container + div > p > a, .logo-container + div {
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.input-container > div > label {
+    letter-spacing: 2px;
+}
+
 .logo-container img {
     width:max(8vw, 50px);
 }
