--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ h2, .logo-container + div > p > a, .logo-container + div {
     padding:12px 32px;
     border-radius:8px;
     border:none;
+    font-size:1.1rem;
 }
 
 form {
